--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <main>
  <div id="hero">
    <div id="hero-box">
-     <img id="hero-img" src="/wdd130/images/basilique.jpg" alt="banner"></div>
+     <img id="hero-img" src="https://th.bing.com/th/id/OIP.cdZJW9oozuEnaK1j-g_DUQHaEK?w=268&h=180&c=7&r=0&o=5&dpr=1.1&pid=1.7" alt="banner"></div>
 
  <section id="hero-msg">
      <h1 class="home-title">Ivory Tourism</h1>
