--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div id="logo-link"><img class="logo" src="https://cdn.glitch.global/0efbeb37-1502-4d39-8c9a-7015a160b03c/ca6ec3bfe0fd4144a2930b5c979e8ae1.png?v=1654398176858" alt="Logo image"></div>
         
     <nav>
-      <a href="index-tourism.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="tours.html">Touristic Site</a> 
       <a href="dance.html">Dance n Food</a> 
      <a href="site-plan-tourism.html">Site Plan</a> 
