--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
       <a href="index.html">Home</a>
       <a href="tours.html">Touristic Site</a> 
       <a href="dance.html">Dance n Food</a> 
-     <a href="site-plan-tourism.html">Site Plan</a> 
+      <a href="site-plan-tourism.html">Site Plan</a> 
       <a href="/index.html">Main Menu</a> 
+      <a href="media-card.html">card</a> 
 
    <!--<a href="card.html">My Media Card</a>
       <a href="forms.html">Forms</a>-->
